deployment/base/trichter/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: trichter
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/part-of: trichter
spec:
  selector:
    app.kubernetes.io/name: api
  ports:
    - port: 8080
      targetPort: 8080
