deployment/base/trichter/api/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api
  namespace: trichter
spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`trichter.hauptspeicher.com`) && (PathPrefix(`/api/v2`) || PathPrefix(`/actuator`))
      kind: Rule
      services:
        - name: api
          port: 8080

    - match: Host(`next.trichter.hauptspeicher.com`) && (PathPrefix(`/api/v2`) || PathPrefix(`/actuator`))
      kind: Rule
      middlewares:
        - name: redirect-next-to-root
      services:
        - name: api
          port: 8080

  tls:
    certResolver: myresolver
